[package]
name = "qiskit-qasm2"
version = "0.2.0"
edition = "2021"

[lib]
name = "qiskit_qasm2"
path = "src-rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.12.3"

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module"]

[profile.release]
lto = 'fat'
codegen-units = 1
