[package]
name = "qiskit-qasm2"
version = "0.5.2"
edition = "2021"

[lib]
name = "qiskit_qasm2"
path = "src-rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.13.2"
lazy_static = "1.4"

[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]

[profile.release]
lto = 'fat'
codegen-units = 1
