[metadata]
name = qiskit_qasm2
version = file: src-python/qiskit_qasm2/VERSION
url = https://github.com/jakelishman/qiskit-qasm2
description = Importer for parsing OpenQASM 2 strings into Qiskit circuits
long_description = file: README.md
long_description_content_type = text/markdown; variant=GFM
license = Apache 2.0 License
license_files = LICENSE
project_urls =
    Bug Tracker = https://github.com/jakelishman/qiskit-qasm2/issues
    Documentation = https://jakelishman.github.io/qiskit-qasm2
    Source Code = https://github.com/jakelishman/qiskit-qasm2
author = Jake Lishman

[options]
packages = find:
package_dir =
    = src-python
include_package_data = True
install_requires =
    qiskit-terra>=0.21.0
    typing_extensions>=4.1.0
zip_safe = False

[options.packages.find]
where = src-python

[options.extras_require]
; This is a dummy option for now, just added for consistency, and in case we
; want to add more extras in the future.
all =
